--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 AWS_REGIONS=us-east-1,us-west-2, us-west-1, ap-south-1
 
 # The 'key' the application uses to enter the target account.
-AWS_TARGET_ACCOUNTS_ROLES=arn:aws:iam::690771798756:role/mjnveks
+ AWS_TARGET_ACCOUNTS_ROLES=arn:aws:iam::681414095337:role/EKS-access-role-for-dashboard-custom
 
 # The 'access list' that says dev-team is allowed to see data from the target account.
 # This MUST point to the account where the EKS clusters are located.
