--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 
 # --- AWS Configuration ---
-AWS_REGIONS=us-east-1,us-west-2, us-west-1, ap-south-1
+AWS_REGIONS=us-east-1,us-west-2, us-west-1, ap-south-1, eu-central-1
 
 # The 'key' the application uses to enter the target account.
 AWS_TARGET_ACCOUNTS_ROLES=arn:aws:iam::681414095337:role/EKS-access-role-for-dashboard-custom,arn:aws:iam::858259715211:role/EKS-access-role-for-dashboard-custom
