--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,54 @@
-annotated-types==0.7.0
-anyio==4.6.2
-APScheduler==3.11.0
-boto3==1.38.33
-botocore==1.38.33
-cachetools==6.0.0
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.2.1
-durationpy==0.10
-fastapi==0.115.12
-google-auth==1.6.3
-gunicorn==23.0.0
-h11==0.16.0
-httptools==0.6.4
-idna==3.10
-isodate==0.7.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
+# Core dependencies
+fastapi==0.110.0
+uvicorn==0.27.1
+jinja2==3.1.2
+python-dotenv==1.0.1
+requests==2.31.0
+pytz==2024.1
+
+# Kubernetes client
+kubernetes==29.0.0
+
+# AWS SDK
+boto3==1.34.46
+botocore==1.34.46
+s3transfer==0.10.1
 jmespath==1.0.1
-kubernetes==33.1.0
-lxml==5.4.0
-MarkupSafe==3.0.2
-numpy==2.2.0
-oauthlib==3.2.2
-packaging==25.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.11.5
-pydantic_core==2.33.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-multipart==0.0.20
-python3-saml==1.16.0
-PyYAML==6.0.2
-requests==2.32.4
-requests-oauthlib==2.0.0
-rsa==4.9.1
-s3transfer==0.13.0
-scipy==1.15.3
-six==1.17.0
-sniffio==1.3.1
-starlette==0.46.2
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-tzlocal==5.3.1
-urllib3==2.4.0
-uvicorn==0.34.3
-uvloop==0.21.0
-watchfiles==1.0.5
-websocket-client==1.8.0
-websockets==15.0.1
-xmlsec==1.3.15
+
+# APScheduler for background jobs
+apscheduler==3.10.4
+
+# SQLAlchemy (assuming you're using it based on `Session`)
+sqlalchemy==2.0.30
+
+# Starlette & Middleware
+starlette==0.36.3
+
+# Optional utilities / parsing / validation
+python-dateutil==2.8.2
+PyYAML==6.0.1
+packaging==24.0
+typing_extensions==4.10.0
+urllib3==2.0.7
+
+# Logging and output styling
+rich==13.7.1
+colorama==0.4.6
+
+# JSON schema validation
+jsonschema==4.10.3
+jsonpatch==1.32
+jsonpointer==2.0
+pyrsistent==0.20.0
+
+# Security
+pyOpenSSL==23.2.0
+cryptography==41.0.7
+PyJWT==2.7.0
+bcrypt==3.2.2
+
+# WebSocket
+websockets==12.0
+
+# Threading
+concurrent-log-handler==0.9.25  # Optional but useful for multi-threaded logging
