--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,75 @@
-# Core dependencies
-fastapi==0.110.0
-uvicorn==0.27.1
-jinja2==3.1.2
-python-dotenv==1.0.1
-requests==2.31.0
-pytz==2024.1
+# Web Framework
+fastapi==0.115.12
+starlette==0.46.2
+uvicorn==0.34.3
+gunicorn==23.0.0
 
-# Kubernetes client
-kubernetes==29.0.0
+# HTML Templates
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+
+# Kubernetes
+kubernetes==33.1.0
 
 # AWS SDK
-boto3==1.34.46
-botocore==1.34.46
-s3transfer==0.10.1
+boto3==1.38.33
+botocore==1.38.33
+s3transfer==0.13.0
 jmespath==1.0.1
 
-# APScheduler for background jobs
-apscheduler==3.10.4
+# Auth
+python3-saml==1.16.0
+xmlsec==1.3.15
+requests-oauthlib==2.0.0
+oauthlib==3.2.2
+rsa==4.9.1
+google-auth==1.6.3
+itsdangerous==2.2.0
 
-# SQLAlchemy (assuming you're using it based on `Session`)
-sqlalchemy==2.0.30
-
-# Starlette & Middleware
-starlette==0.36.3
-
-# Optional utilities / parsing / validation
-python-dateutil==2.8.2
-PyYAML==6.0.1
-packaging==24.0
-typing_extensions==4.10.0
-urllib3==2.0.7
-
-# Logging and output styling
-rich==13.7.1
-colorama==0.4.6
-
-# JSON schema validation
+# Parsing, Data & Formats
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+python-dotenv==1.1.0
+python-multipart==0.0.20
+durationpy==0.10
+isodate==0.7.2
+lxml==5.4.0
 jsonschema==4.10.3
-jsonpatch==1.32
-jsonpointer==2.0
-pyrsistent==0.20.0
+typing-inspection==0.4.1
 
-# Security
-pyOpenSSL==23.2.0
-cryptography==41.0.7
-PyJWT==2.7.0
-bcrypt==3.2.2
+# Scientific & Math
+numpy==2.3.0
+scipy==1.15.3
 
-# WebSocket
-websockets==12.0
+# Type Annotations & Validation
+pydantic==2.11.5
+pydantic_core==2.33.2
+annotated-types==0.7.0
+typing_extensions==4.14.0
 
-# Threading
-concurrent-log-handler==0.9.25  # Optional but useful for multi-threaded logging
+# Schedulers / Jobs
+APScheduler==3.11.0
+tzlocal==5.3.1
+
+# Networking / HTTP / WebSockets
+requests==2.32.4
+urllib3==2.4.0
+httpx==0.27.0  # Optional alternative for advanced async requests
+websockets==15.0.1
+websocket-client==1.8.0
+httptools==0.6.4
+h11==0.16.0
+anyio==4.9.0
+sniffio==1.3.1
+
+# Utility & Encoding
+certifi==2025.4.26
+charset-normalizer==3.4.2
+idna==3.10
+six==1.17.0
+click==8.2.1
+cachetools==6.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+watchfiles==1.0.5
+uvloop==0.21.0
